--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -46,13 +46,13 @@
                   </form>
                 </div>
               </nav>
-    <h1>살려주십쇼</h1>
-    {% for blog in blogs.all %}
-       <div class="container">
-           <h1>{{blog.title}}</h1>
-           <p>{{blog.pub_date}}</p>
-           <p>{{blog.summary}}<a href="{% url 'detail' blog.id %}">...more</a></p> <!-- 요약된거 보이게하는것 -->
-       </div>
-    {% endfor %}  
+
+<h1>상세페이지</h1>
+<div class="container jumbotron">
+        <h1>{{ blog.title }}</h1>
+        <p>{{ blog.pub_date }}</p>
+        <p>{{ blog.body }}</p>
+        <a href="{% url 'home' %}">돌아가기</a>
+    </div>
 </body>
 </html>
