새글쓰기기능

--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -46,14 +46,18 @@
                   </form>
                 </div>
               </nav>
-    <h1>살려주십쇼</h1>
-    <a href="{% url 'new' %}">글쓰기</a>
-    {% for blog in blogs.all %}
-       <div class="container">
-           <h1>{{blog.title}}</h1>
-           <p>{{blog.pub_date}}</p>
-           <p>{{blog.summary}}<a href="{% url 'detail' blog.id %}">...more</a></p> <!-- 요약된거 보이게하는것 -->
-       </div>
-    {% endfor %}  
+    <div class="container">
+    <form action="{% url 'create' %}">
+        <h4>제목: </h4>
+        <input type="text" name="title">
+        <br>
+        <br>
+        <h4>본문:</h4>
+        <textarea cols=30 rows=10 name="body"></textarea>
+        <br>
+        <br>
+        <input class="btn btn-dark" type="submit" value="제출하기">
+    </form>
+</div>
 </body>
 </html>
